[gd_scene load_steps=16 format=3 uid="uid://pdg3q0005hts"]

[ext_resource type="Script" path="res://MainMenu/scripts/mainscene/MainScene.gd" id="1_g3xd2"]
[ext_resource type="Script" path="res://MainMenu/scripts/mainscene/parallax_background.gd" id="1_pxtow"]
[ext_resource type="Texture2D" uid="uid://b0lwhns4sltlo" path="res://MainMenu/backgrounds/background 3/origbig.png" id="2_8ntym"]
[ext_resource type="Texture2D" uid="uid://b8bkn708dspxo" path="res://MainMenu/backgrounds/background 4/origbig.png" id="2_hx5vq"]
[ext_resource type="Texture2D" uid="uid://c7swrjvrbs2ua" path="res://MainMenu/Title/3.png" id="3_dkfwc"]
[ext_resource type="Script" path="res://MainMenu/scripts/mainscene/title_night.gd" id="4_r8i2d"]
[ext_resource type="Texture2D" uid="uid://dmqxmy4fihob" path="res://MainMenu/Title/4.png" id="5_ptcht"]
[ext_resource type="Texture2D" uid="uid://4daisen4jmvk" path="res://MainMenu/buttons/start-2.png" id="6_5ahp6"]
[ext_resource type="Texture2D" uid="uid://oqbjtvk1hiv8" path="res://MainMenu/buttons/start-1.png" id="7_1pvdg"]
[ext_resource type="Texture2D" uid="uid://bvy401dk4fjnt" path="res://MainMenu/buttons/help-2.png" id="9_gvpln"]
[ext_resource type="Texture2D" uid="uid://cjj3geq34h1e1" path="res://MainMenu/buttons/help-1.png" id="10_6f56s"]
[ext_resource type="Script" path="res://MainMenu/scripts/mainscene/playbuttonanimation.gd" id="10_cppqi"]
[ext_resource type="AudioStream" uid="uid://brg3eatpqif66" path="res://MainMenu/music/Menu_Select_00.mp3" id="13_mmudt"]

[sub_resource type="GDScript" id="GDScript_q0pyh"]
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_h2vw4"]
script/source = "extends TextureButton

var wave_timer: float = 0.0  # Timer for the wave effect
var wave_frequency: float = 3.0  # Frequency of the wave
var wave_amplitude: float = 10.0  # Amplitude of the wave
var original_position: Vector2  # Store the original position

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	original_position = position  # Save the original position when the scene is ready

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	wave_timer += delta
	# Calculate the wavy position based on a sine wave
	var offset_y = sin(wave_timer * wave_frequency) * wave_amplitude
	position.y = original_position.y + offset_y  # Adjust only the y position

func _on_button_pressed():
	# Load the second scene
	get_tree().change_scene(\"res://scenes/Instructions.tscn\")
"

[node name="NightStartScene" type="Node2D"]
process_mode = 3
script = ExtResource("1_g3xd2")
day_image = ExtResource("2_hx5vq")
night_image = ExtResource("2_8ntym")

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_mmudt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_pxtow")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(2304, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(1, 0.993056)
texture = ExtResource("2_8ntym")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 2304, 1296)
script = SubResource("GDScript_q0pyh")

[node name="MainTitle" type="Sprite2D" parent="."]
position = Vector2(964, 465)
scale = Vector2(2.266, 1.766)
texture = ExtResource("3_dkfwc")
script = ExtResource("4_r8i2d")

[node name="SubTitle" type="Sprite2D" parent="."]
position = Vector2(950, 688)
scale = Vector2(2.9445, 2.173)
texture = ExtResource("5_ptcht")
script = ExtResource("4_r8i2d")

[node name="PlayButton" type="TextureButton" parent="."]
offset_left = 743.0
offset_top = 641.0
offset_right = 1194.0
offset_bottom = 763.0
texture_normal = ExtResource("6_5ahp6")
texture_pressed = ExtResource("7_1pvdg")
texture_hover = ExtResource("7_1pvdg")
stretch_mode = 4
script = ExtResource("10_cppqi")

[node name="InstructionButtonNight" type="TextureButton" parent="."]
offset_left = 744.0
offset_top = 807.0
offset_right = 1193.0
offset_bottom = 942.0
texture_normal = ExtResource("9_gvpln")
texture_pressed = ExtResource("10_6f56s")
texture_hover = ExtResource("10_6f56s")
stretch_mode = 4
script = SubResource("GDScript_h2vw4")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="InstructionButtonNight" to="." method="_on_instruction_button_night_pressed"]
